1999-08-17  James Henstridge  <james@daa.com.au>

	* lib/widgets.c: changed handlers that were connected to the GtkButton
	"pressed" signal to connect to the "clicked" signal.  This removes the
	problem where dialogs are inactive until you click a mouse button
	after using a colour selector.

	* configure.in: added extra makefiles to AC_OUTPUT list.
	
	* objects/Makefile.am (SUBDIRS): added flowchart module

	* objects/flowchart/*: a collection of shapes for use in flowcharts.

	* app/color_area.c (color_area_events): similar here.

	* app/linewidth_area.c (linewidth_area_events): sometimes a configure
	event is recieved with event->width == 0, which causes a warning if we
	try to create a pixmap of that width.

	* app/preferences.c, app/preferences.h, app/grid.c: added code to
	allow you to configure the colour of the grid, and also lets you
	set the grid to use dotted lines instead of solid ones.
	
	* app/commands.c, app/commands.h, app/diagram.c, app/diagram.h,
	app/menus.c, app/Makefile.am: added menu entry for exporting SVG files.
	
	* app/render_svg.h, app/render_svg.c: an SVG (Scalable Vector Graphics)
	export filter.  It is not quite complete, but for most shapes it
	works as expected.  Fonts still need a bit of work.

1999-08-11  Robert Brady  <rwb197@ecs.soton.ac.uk>

	* configure.in: Added "en_GB" to ALL_LINGUAS.

1999-08-04  Fredrik Hallenberg  <hallon@lysator.liu.se>

	* menus.c
	Added Undo and Redo to GNOME menus.
	
	* objects/ER/attribute.c:
	* objects/ER/entity.c:
	* objects/ER/participation.c:
	* objects/ER/relationship.c:
	Added get/set_state functions.

	* objects/ER/participation.c:
	Added add/delete segment.

	* po/sv.po
	Updated Swedish translation.

1999-07-25  Alexander Larsson  <alla@lysator.liu.se>

        * app/preferences.[hc]:
	Added undo_depth pref.
	
	* app/undo.[ch]:
	Never grow stack larger than pref.undo_depth.
	undo_depth == 0 means unlimited.
	Converted printfs to conditionally compiled DEBUG_PRINTFs.
	